--- a/indexJavascript.html
+++ b/indexJavascript.html
@@ -121,7 +121,7 @@ Find the html element that contains "USA".
 Print that element's contents.
 */
 //<h1>United <span data-customAttr="USA">States</span> of America (<span>USA</span>)</h1>
-function getUSA(){
+function getUSA(){ // UNFINISHED, misunderstood the question
   let elems = document.querySelectorAll('[data-customAttr="USA"]');
   console.log(elems[0].innerHTML);
 }
@@ -223,9 +223,14 @@ Regarding these elements:
 	<input id="num2" class="nums" type="text"/>
 	<h3>Sum: <span id="sum"></span></h3>
 */
+
+// This has to be commented out because it interfered with other code.
+// However, it works.
+/*
 let n1 = document.getElementById("num1").value;
 let n2 = document.getElementById("num2").value;
 document.getElementById("sum").innerHTML = + n1 + + n2;
+*/
 
 /*
 Define onchange event handler.
@@ -234,6 +239,49 @@ Put the sum in the <span> element.
 If values cannot be added, put "Cannot add" in the <span> element
 */
 
+  var n1=null;
+  var n2=null;
+window.onload = function(){
+ // This code gets bugged when the lines for question 6 are not commented out.
+  console.log("window.onload executed")
+  document.getElementById("num1").addEventListener('change', onChangeOne);
+  document.getElementById("num2").addEventListener('change', onChangeTwo);
+}
+
+function numOne(){
+  console.log("numOne() executed");
+  n1 = document.getElementById("num1").value;
+}
+
+function numTwo(){
+  console.log("numTwo() executed");
+  n2 = document.getElementById("num2").value;
+}
+
+function updateHeader(){
+  let addition = + n1 + + n2;
+  if(isNaN(addition))
+    document.getElementById("sum").innerHTML = "Cannot Add";
+  else if(!!n1 && !!n2)
+    document.getElementById("sum").innerHTML = addition;
+  else
+    document.getElementById("sum").innerHTML = "Cannot Add";
+}
+
+function onChangeOne() {
+  console.log("onChangeOne() executed");
+  numOne();
+  updateHeader();
+}
+
+function onChangeTwo() {
+  console.log("onChangeTwo() executed");
+  numTwo();
+  updateHeader();
+}
+
+
+
 /*
 7. Skills Event
 NOTE: Write unobtrusive Javascript
@@ -241,8 +289,12 @@ When user selects a skill, create an alert with a message similar to:
 	"Are you sure CSS is one of your skills?"
 NOTE: no alert should appear when user deselects a skill.
 */
+var selectElem = document.getElementsByName("skills")[0];
+selectElem.addEventListener("change", function(){
+  alert("Are you sure " + selectElem[selectElem.selectedIndex].innerHTML + " is one of your skills?");
+});
 
-/*
+/* UNFINISHED, won't assign new values in function to global variables.
 8. Favorite Color Event
 NOTE: Write unobtrusive Javascript
 NOTE: This is regarding the favoriteColor radio buttons.
@@ -251,6 +303,48 @@ When a user selects a color, create an alert with a message similar to:
 In this example, green is the new value and blue is the old value.
 Make the background color (of all favoriteColor radio buttons) the newly selected favoriteColor
 */
+var colorArr = document.getElementsByName("favoriteColor");
+var colorBlue = colorArr[0];
+var colorRed = colorArr[1];
+var colorGreen = colorArr[2];
+var colorOrange = colorArr[3];
+var oldColor = " ";
+var newColor = " ";
+
+var a=1;
+console.log("a="+a);
+
+colorBlue.addEventListener("change", function(){
+  oldColor = newColor;
+  window.newColor = colorBlue.value;
+  console.log("colorBlue.value="+colorBlue.value);
+  console.log("oldColor="+oldColor.value+", newColor="+newColor.value);
+  console.log("Blue got selected\n");
+  a = a + 1;
+});
+console.log("a="+a);
+
+colorRed.addEventListener("change", function(){
+  oldColor = newColor;
+  newColor = colorRed.value;
+  console.log("oldColor="+oldColor.value+", newColor="+newColor.value);
+  console.log("Red got selected\n");
+});
+
+colorGreen.addEventListener("change", function(){
+  oldColor = newColor;
+  newColor = colorGreen.value;
+  console.log("oldColor="+oldColor.value+", newColor="+newColor.value);
+  console.log("Green got selected\n");
+});
+
+colorOrange.addEventListener("change", function(){
+  oldColor = newColor;
+  newColor = colorOrange.value;
+  console.log("oldColor="+oldColor.value+", newColor="+newColor.value);
+  console.log("Orange got selected\n");
+});
+
 
 /*
 9. Show/Hide Event
