Mar2: Got JQuery working and did upto #2

--- a/indexJQuery.html
+++ b/indexJQuery.html
@@ -96,8 +96,10 @@
   <a>Click Here</a>
   <a>Click <span data-customAttr="500">Here3</span></a>
   <a>Click Here</a>
-	  
+	   
+  <script type="text/javascript" src="../jquery-3.4.1.min.js"></script>
   <script type="text/javascript">
+  
     //TODO: Javascript homework
 /*
 -----------------------------------------------------------------------------------
@@ -120,13 +122,29 @@ Define function getUSA()
 Find the html element that contains "USA".
 Print that element's contents.
 */
-  
+    //<h1>United <span data-customAttr="USA">States</span> of America (<span>USA</span>)</h1>
+    function getUSA(){
+        console.log($('[data-customAttr="USA"]').text());
+    }
+
+
 /*
 2. Sales
 Define function getPeopleInSales()
 Print the names of all the people in the sales department.
 */
-  
+function getPeopleInSales(){
+    let tableElem = $("table");
+    console.log("Employees in the Sales Department:");
+    tableElem.find("tr").each(function(row, col){
+        let $tds = $(this).find("td");
+        if($tds.eq(1).text() === "Sales")
+            console.log($tds.eq(0).text());
+    });
+}
+
+
+
 /*
 3. Click Here
 Define function getAnchorChildren()
