--- a/indexJQuery.html
+++ b/indexJQuery.html
@@ -10,7 +10,7 @@
     <div>
       <h3>Sum: <span id="sum"></span></h3>
       <h5 id="currentTime"></h5>
-    </div>
+    </div>/nu
     <div>
       <h1>United <span data-customAttr="USA">States</span> of America (<span>USA</span>)</h1>
       <div><a>Click Here</a><a>Click Here</a><a>Click Here</a><a>Click Here</a><a>Click Here</a></div>
@@ -136,7 +136,7 @@ Print the names of all the people in the sales department.
 function getPeopleInSales(){
     let tableElem = $("table");
     console.log("Employees in the Sales Department:");
-    tableElem.find("tr").each(function(row, col){
+    tableElem.find("tr").each(function(){
         let $tds = $(this).find("td");
         if($tds.eq(1).text() === "Sales")
             console.log($tds.eq(0).text());
@@ -151,13 +151,30 @@ Define function getAnchorChildren()
 Find all anchor elements with a <span> child.
 Print the contents of <span>
 */
-  
+function getAnchorChildren(){
+    let anchorElems = $("a");
+    anchorElems.find("span").each(function(i){
+        console.log($(this).text());
+    });
+}
+
+
+
 /*
 4. Hobbies
 Define function getHobbies()
 Find the checked option in the 'hobbies' select element.
 Print the value and the contents.
 */
+function getHobbies(){
+    let selectElems = $('[name="hobbies"]');
+    let optionElem;
+
+    console.log("Selected Hobbies:");
+    selectElems.find('[selected="selected"]').each(function(){
+        console.log($(this).text());
+    });
+}
   
 /*
 5. Custom Attribute
@@ -166,6 +183,18 @@ Find all elements with "data-customAttr" attribute
 Print the value of the attribute.
 Print the element that has the attribute.
 */
+function getCustomAttribute(){
+    let spanElems = $('[data-customAttr]');
+
+    console.log("Elements that have the attribute data-customAttr (Element:Value):");
+    spanElems.each(function(){
+        console.log($(this).prop("tagName") + 
+                    " : " +
+                    $(this).attr("data-customAttr"));
+    });
+}
+
+
 
 /*
 6. Sum Event
@@ -175,6 +204,11 @@ Regarding these elements:
 	<input id="num2" class="nums" type="text"/>
 	<h3>Sum: <span id="sum"></span></h3>
 */
+// This has to be commented out because it interfers with code in problem 7.
+let n1_6 = + $("#num1").val();
+let n2_6 = + $("#num2").val();
+$("#sum").html(n1_6+n1_6);
+
 
 /*
 Define onchange event handler.
@@ -182,6 +216,31 @@ Add <input> element values.
 Put the sum in the <span> element.
 If values cannot be added, put "Cannot add" in the <span> element
 */
+// This code gets buggy when the lines for question 6 are not commented out.
+let numOneElem = $("#num1");
+let numTwoElem = $("#num2");
+let sumHeader = $("#sum");
+let numOne, numTwo;
+
+numOneElem.change(function(){
+    numOne = + numOneElem.val();
+    updateHeader(numOne,numTwo);
+});
+
+numTwoElem.change(function(){
+    numTwo = + numTwoElem.val();
+    updateHeader(numOne,numTwo);
+});
+
+function updateHeader(n1, n2){
+  let addition = + n1 + + n2;
+  if(isNaN(addition))
+    $(sumHeader).html("Cannot Add");
+  else if(!!n1 && !!n2)
+    $(sumHeader).html(addition);
+  else
+    $(sumHeader).html("Cannot Add");
+}
 
 /*
 7. Skills Event
@@ -190,6 +249,7 @@ When user selects a skill, create an alert with a message similar to:
 	"Are you sure CSS is one of your skills?"
 NOTE: no alert should appear when user deselects a skill.
 */
+
 
 /*
 8. Favorite Color Event
