--- a/indexJQuery.html
+++ b/indexJQuery.html
@@ -122,10 +122,10 @@ Define function getUSA()
 Find the html element that contains "USA".
 Print that element's contents.
 */
-    //<h1>United <span data-customAttr="USA">States</span> of America (<span>USA</span>)</h1>
-    function getUSA(){
-        console.log($('[data-customAttr="USA"]').text());
-    }
+//<h1>United <span data-customAttr="USA">States</span> of America (<span>USA</span>)</h1>
+function getUSA(){
+    console.log($('[data-customAttr="USA"]').text());
+}
 
 
 /*
@@ -175,6 +175,8 @@ function getHobbies(){
         console.log($(this).text());
     });
 }
+
+
   
 /*
 5. Custom Attribute
@@ -242,6 +244,7 @@ function updateHeader(n1, n2){
     $(sumHeader).html("Cannot Add");
 }
 
+
 /*
 7. Skills Event
 NOTE: Write unobtrusive Javascript
@@ -265,7 +268,19 @@ When a user selects a color, create an alert with a message similar to:
 In this example, green is the new value and blue is the old value.
 Make the background color (of all favoriteColor radio buttons) the newly selected favoriteColor
 */
+let colorElems = $('[name="favoriteColor"]');
+let oldColor = "";
+let newColor = "";
 
+colorElems.each(function(){
+    $(this).click(function(){
+        oldColor = newColor;
+        newColor = $(this).val();
+        if(!!oldColor)
+            alert("So you like " + newColor + " more than " + oldColor + " now?");
+        colorElems.wrap('<span style="background-color: '+$(this).val()+';"></span>');
+    });
+});
 
 
 /*
@@ -275,6 +290,16 @@ When user hovers over an employees name:
 	Hide the name if shown.
 	Show the name if hidden.
 */
+var empNames = $(".empName");
+empNames.each(function(){
+    $(this).on("mouseenter",function(){
+        $(this).css("opacity",0.0);
+    });
+    $(this).on("mouseleave",function(){
+        $(this).css("opacity", 1.0);
+    });
+});
+
 
 /*
 10. Current Time
@@ -283,6 +308,38 @@ Regarding this element:
 Show the current time in this element in this format: 9:05:23 AM
 The time should be accurate to the second without having to reload the page.
 */
+function displayTime(){
+    let timeElem = $('#currentTime');
+    let currentDateTime = new Date();
+    let hours = currentDateTime.getHours();
+    let mins = currentDateTime.getMinutes();
+    let minuteZero = "";
+    let secs = currentDateTime.getSeconds();
+    let secondZero = "";
+    let amPm = "AM";
+  
+    if(hours>12){
+        hours -= 12;
+        amPm = "PM";
+    }
+
+    if(mins<10)
+        minuteZero="0";
+
+    if(secs<10)
+        secondZero="0";
+
+    timeElem.html(
+    	hours + ":" +
+    	minuteZero + mins + ":" +
+    	secondZero + secs + " " +
+    	amPm
+    );
+}
+window.setInterval(displayTime,1000);
+
+
+
 
 /*
 11. Delay
@@ -290,6 +347,22 @@ Regarding this element:
 	<p id="helloWorld">Hello, World!</p>
 Three seconds after a user clicks on this element, change the text to a random color.
 */
+let helloTag = $("#helloWorld");
+helloTag.click(function(){
+    setTimeout(function(){
+        $(helloTag).css("color", getRandomColor());
+    }, 3000);
+});
+
+function getRandomColor(){
+  var hexLetters = '0123456789ABCDEF';
+  var output = "";
+  for(let i=0; i<6; i++)
+    output += hexLetters[Math.floor(Math.random()*16)];
+  return "#" + output;
+}
+
+
 
 /*
 12. Walk the DOM
@@ -297,6 +370,20 @@ Define function walkTheDOM(node, func)
 This function should traverse every node in the DOM. Use recursion.
 On each node, call func(node).
 */
+function walkTheDOM(node, func){
+    if((typeof node === "object") &&
+       (typeof node.children() !== "undefined") &&
+       (node.length > 0))
+    {
+        func("Element: "+node.prop('tagName'));
+        node.children().each(function(){
+            func($(this).prop("tagName"))
+            func($(this).length);
+            walkTheDOM($(this), func);
+        });
+    }
+}
+let root = $("html");
 
   </script>
   
